feat: adds readable created dates below each post

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div class="padding-20">
-      <h1>gass-git</h1>
+      <div class="main-title">gass-git</div>
     </div>
     <div id="root"></div>
     <script type="module" src="./src/main.js"></script>
