feat: user returns to home on main title click

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div class="padding-20">
-      <div class="main-title">gass-git</div>
+      <a href="/">gass-git</a>
     </div>
     <div id="root"></div>
     <script type="module" src="./src/main.js"></script>
