feat: the bolt icon within the header is now fully css

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
   <body>
     <header>
       <div class="wrapper">
-        <div>
-          <img src="./bolt.png" class="bolt" />
+        <div class="bolt-wrapper">
+          <div class="top-triangle"></div>
+          <div class="bottom-triangle"></div>
         </div>
 
         <div>
